<resources>
    <string name="app_name">Mythings</string>
    <string name="label_serie">serie</string>
    <string name="label_precio">Precio</string>
    <string name="label_nombre">Nombre</string>
    <string name="labelfecha">Fecha</string>
    <string name="label_nombre_tabla">Nombre de cosa</string>
    <string name="label_precio_tabla">Precio</string>
    <string name="label_num_serie">Número de serie</string>
    <string name="label_boton_cambioFecha"> Editar fecha</string>
</resources>